provision/proxy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: skillometer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxy.skillometer.idev-present.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: "traefik-dashboard-auth"
  tls:
    secretName: wildcard-skillometer-idev-present-com-tls
